Fixed: Extra menu issues Orange header alignment Unsorted lists style

--- a/web/app/themes/understrap-child/css/child-theme.css
+++ b/web/app/themes/understrap-child/css/child-theme.css
@@ -10833,6 +10833,10 @@ ul {
   list-style-type: none;
   padding-left: 0; }
 
+.wpb_wrapper ul {
+  list-style-type: disc;
+  padding-left: 20px; }
+
 relatedposts li {
   margin-bottom: 50px; }
 
@@ -10930,13 +10934,35 @@ iframe {
   height: stretch; }
 
 .orangerubrik {
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
   color: #fff;
-  background: #f2ad00;
-  padding: 0 1rem;
   font-size: 1.8rem;
   text-transform: uppercase;
   margin-bottom: 1.8rem; }
+  .orangerubrik.left {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start; }
+  .orangerubrik.middle {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  .orangerubrik.right {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end; }
+  .orangerubrik .wpb_wrapper {
+    max-width: -webkit-fit-content;
+    max-width: -moz-fit-content;
+    max-width: fit-content;
+    background: #f2ad00;
+    padding: 0 1rem; }
 
 .displayarea {
   background-position: center; }
@@ -11103,6 +11129,12 @@ iframe {
   border-bottom: 2px #f2ad00 solid;
   padding: 0;
   margin: 0 2rem; }
+
+#main-menu .menu-item a {
+  padding: 0;
+  margin: 0 2rem; }
+  #main-menu .menu-item a:hover {
+    border-bottom: 2px #f2ad00 solid; }
 
 .h1,
 h1 {
@@ -11313,6 +11345,9 @@ END RELATED POSTS
   position: fixed;
   width: 100%;
   z-index: 1000; }
+
+.vc_parallax.show-bg-from-top .vc_parallax-inner {
+  top: 45px !important; }
 
 .submenu {
   color: #f5eded;
@@ -11987,6 +12022,7 @@ body .navbar-expand-lg {
           -ms-flex-pack: center;
               justify-content: center;
       margin-right: 0;
+      margin-bottom: 0;
       text-align: center;
       position: relative; }
       #extra-menu-inner-column #extra-menu-fixed li.menu-item a {
@@ -12013,11 +12049,11 @@ body .navbar-expand-lg {
       margin-right: 0; }
     #extra-menu-inner-column #extra-menu-fixed li.menu-item:first-child {
       position: absolute;
-      left: 3.4rem;
+      left: 4rem;
       width: auto;
       top: 0;
       bottom: 0;
-      padding: .1em 0; }
+      padding: 0; }
       #extra-menu-inner-column #extra-menu-fixed li.menu-item:first-child a {
         font-family: "Playfair Display";
         text-transform: none;
