--- a/web/app/themes/understrap-child/sass/theme/_child_theme.scss
+++ b/web/app/themes/understrap-child/sass/theme/_child_theme.scss
@@ -63,6 +63,11 @@ ul {
     padding-left: 0;
 }
 
+.wpb_wrapper ul {
+    list-style-type: disc;
+    padding-left: 20px;
+}
+
 relatedposts li {
     margin-bottom: 50px;
 }
@@ -180,13 +185,31 @@ iframe {
 }
 
 .orangerubrik {
-    display: inline-block;
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
     color: #fff;
-    background: #f2ad00;
-    padding: 0 1rem;
     font-size: 1.8rem;
     text-transform: uppercase;
     margin-bottom: 1.8rem;
+
+    &.left {
+        justify-content: flex-start;
+    }
+
+    &.middle {
+        justify-content: center;
+    }
+
+    &.right {
+        justify-content: flex-end;
+    }
+
+    .wpb_wrapper {
+        max-width: fit-content;
+        background: #f2ad00;
+        padding: 0 1rem;
+    }
 }
 
 .displayarea {
@@ -386,6 +409,16 @@ iframe {
     }
 }
 
+#main-menu .menu-item {
+    a {
+        padding: 0;
+        margin: 0 2rem;
+
+        &:hover {
+            border-bottom: 2px #f2ad00 solid;
+        }
+    }
+}
 
 
 .h1,
