--- a/web/app/themes/understrap-child/sass/theme/_extra_menu.scss
+++ b/web/app/themes/understrap-child/sass/theme/_extra_menu.scss
@@ -32,6 +32,7 @@
       align-items: center;
       justify-content: center;
       margin-right: 0;
+      margin-bottom: 0;
       text-align: center;
       position: relative;
 
@@ -69,11 +70,11 @@
 
     li.menu-item:first-child {
       position: absolute;
-      left: 3.4rem;
+      left: 4rem;
       width: auto;
       top: 0;
       bottom: 0;
-      padding: .1em 0;
+      padding: 0;
 
       a {
         font-family: "Playfair Display";
